## Discover dependencies

CONFIGURE_FILE( "procHunter.sh.in" "procHunter.sh" @ONLY )
CONFIGURE_FILE( "catjob.in" "catjob" @ONLY )

INSTALL(FILES catjob.py procFinder.py DESTINATION analysis
    PERMISSIONS OWNER_READ OWNER_EXECUTE GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE)

INSTALL(FILES ${CMAKE_CURRENT_BINARY_DIR}/catjob ${CMAKE_CURRENT_BINARY_DIR}/procHunter.sh DESTINATION analysis
    PERMISSIONS OWNER_READ OWNER_EXECUTE GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE)

ADD_SUBDIRECTORY( python )
