INCLUDE_DIRECTORIES ( "${CMAKE_CURRENT_SOURCE_DIR}" )
INCLUDE_DIRECTORIES ( "${CMAKE_CURRENT_BINARY_DIR}" )
INCLUDE_DIRECTORIES ( "${CMAKE_CURRENT_SOURCE_DIR}/.." )
INCLUDE_DIRECTORIES ( "${CMAKE_CURRENT_BINARY_DIR}/.." )

## setup nclq
SET (FLEX_DIR $ENV{FLEX_DIR})
SET (NCLQ_DIR ${CMAKE_BINARY_DIR}/nclq)
ExternalProject_Add(
    nclq
    GIT_REPOSITORY git@bitbucket.org:berkeleylab/nersc-nclq.git
    CMAKE_ARGS "-DFLEX_INCLUDE_DIR=${FLEX_DIR}/include"
        "-DVALGRIND_INCLUDE_DIR=${VALGRIND_INCLUDE_DIR}"
        "-DCMAKE_INSTALL_PREFIX=${NCLQ_DIR}"
        "-DCMAKE_BUILD_TYPE=${CMAKE_BUILD_TYPE}"
    TEST_BEFORE_INSTALL 1
)
ADD_EXECUTABLE( qp client.cpp QProc.cpp QProc.hh )
ADD_EXECUTABLE( qpd server.cpp QProc.cpp QProc.hh )

